--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md bg-primary navbar-dark">
-    <div class="container"> <a class="navbar-brand" href="#">Navbar</a> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container"> <a class="navbar-brand text-white" href="#">Navbar</a> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -20,6 +20,21 @@
       </div>
     </div>
   </nav>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 offset-md-3">
+          <form class="">
+            <div class="form-group"> <label>Email address</label> <input type="email" class="form-control" placeholder="Enter email"> </div>
+            <div class="form-group"> <label>Password</label> <input type="password" class="form-control" placeholder="Password"> </div>
+            <div class="form-group"> <label>Password</label> <input type="password" class="form-control" placeholder="Password"> </div>
+            <div class="form-group"> <label>Password</label> <input type="password" class="form-control" placeholder="Password"> </div>
+            <div class="form-group"> <label>Password</label> <input type="password" class="form-control" placeholder="Password"> </div>
+            <div class="form-group"> <label>Password</label> <input type="password" class="form-control" placeholder="Password"> </div> <button type="submit" class="btn btn-primary">Login</button></form>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
